# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: code_climate.yml  linter.yml  main.yml
gendiff/: __init__.py  diff.py  gendiff.py  parse.py
gendiff/format/: stylish.py
gendiff/formats/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_gendiff.py
tests/fixtures/: diff_json.json  file2.json  file2.yaml
