[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["akocur <akocur@yandex.ru>"]
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
asciinema = "^2.0.2"
flake8-docstrings = "^1.6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"